Fix topologyDetails z-index

--- a/src-web/components/Topology/scss/topology-details.scss
+++ b/src-web/components/Topology/scss/topology-details.scss
@@ -16,7 +16,6 @@
   right: 0;
   background-color: $color__white;
   box-shadow: -1px 0 7px 0 rgba(0, 0, 0, 0.10);
-  z-index: 999;
   width: 463px;
   max-height: 100%;
   height: 100%;
